//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Bistro {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [unique, not null]
  tipForms TipForm [not null]
  bistroUser BistroUser [not null]
  positions Position [not null]
  osm_id String
  osm_type String
  osm_display_name String
  osm_lat Float
  osm_lon Float
  amenity String
  house_number String
  road String
  suburb String
  city String
  state String
  country String
  PendingJoin PendingJoin [not null]
}

Table PendingJoin {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  bistro Bistro [not null]
  user User [not null]
  bistroId String [not null]
  userId String [not null]

  indexes {
    (bistroId, userId) [unique]
  }
}

Table TipForm {
  id String [pk]
  bistroId String [not null]
  bistro Bistro [not null]
  formula Json [not null]
  tips Tip [not null]
}

Table Tip {
  id String [pk]
  name String [not null]
  tipFormId String [not null]
  date DateTime [not null]
  total Decimal [not null]
  flatEquation String [not null]
  tipForm TipForm [not null]
}

Table BistroUser {
  id String [pk]
  bistroId String [not null]
  userId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  bistro Bistro [not null]
  user User [not null]
  authority Authority [not null, default: 'USER']
  bistroUserPositions BistroUserPosition [not null]

  indexes {
    (bistroId, userId) [unique]
  }
}

Table BistroUserPosition {
  id String [pk]
  bistroUser BistroUser [not null]
  position Position [not null]
  tipPercent Int [not null, default: 0]
  bistroUserId String [not null]
  positionId String [not null]
  TipContribution TipContribution [not null]

  indexes {
    (bistroUserId, positionId) [unique]
  }
}

Table Position {
  id String [pk]
  bistroId String [not null]
  name String [not null]
  positionTipPercent Int [not null, default: 0]
  hourlyRate Float [not null]
  bistro Bistro [not null]
  bistroUserPositions BistroUserPosition [not null]

  indexes {
    (name, bistroId) [unique]
  }
}

Table TipContribution {
  id String [pk]
  date DateTime [not null]
  tipPercent Int [not null, default: 0]
  positionTipPercent Int [not null, default: 0]
  hours Decimal [not null]
  bistroUserPosition BistroUserPosition [not null]
  bistroUserPositionId String [not null]
}

Table User {
  id String [pk]
  name String
  email String [unique]
  emailVerified DateTime
  image String
  accounts Account [not null]
  sessions Session [not null]
  bistroUser BistroUser [not null]
  PendingJoin PendingJoin [not null]
}

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user User [not null]
}

Enum Authority {
  MODERATOR
  USER
}

Ref: PendingJoin.bistroId > Bistro.id [delete: Cascade]

Ref: PendingJoin.userId > User.id [delete: Cascade]

Ref: TipForm.bistroId > Bistro.id

Ref: Tip.tipFormId > TipForm.id

Ref: BistroUser.bistroId > Bistro.id [delete: Cascade]

Ref: BistroUser.userId > User.id [delete: Cascade]

Ref: BistroUserPosition.bistroUserId > BistroUser.id

Ref: BistroUserPosition.positionId > Position.id

Ref: Position.bistroId > Bistro.id

Ref: TipContribution.bistroUserPositionId > BistroUserPosition.id

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]